:recycle: Refactor: 국가 코드 수정 및 카테고리 추가
- us 외에 다른 기사 응답을 제공하지 않아서 그 외 국가코드 요청에서 배제

- 단일 국가 : 카테고리 종류 추가